force-app/main/default/objects/Status_Tracking__c/Status_Tracking__c.object-meta.xml
<CustomObject>
    <label>Status Tracking</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Status Tracking Number#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>