force-app/main/default/objects/Status_Tracking__c/fields/Miliseconds__c.field-meta.xml
<CustomField>
    <fullName>Miliseconds__c</fullName>
    <label>Miliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>