force-app/main/default/objects/Status_Tracking__c/fields/Number_of_times_in_status__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_in_status__c</fullName>
    <label>Number of times in status</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>