force-app/main/default/objects/Status_Tracking__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>TEXT(FLOOR( Miliseconds__c / 86400)) +&apos; Days, &apos;+ TEXT( FLOOR( MOD(Miliseconds__c ,86400) / 3600)) +&apos; Hours, &apos;+ TEXT(FLOOR(MOD( MOD(Miliseconds__c ,86400),3600) / 60))+&apos; Minutes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <type>Text</type>
</CustomField>