force-app/main/default/objects/Status_Tracking__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>